--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,22 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>[5.0.0,5.9.9]</version>
+        </dependency>  
+        <!--JPA-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>[5.0.0,5.9.9]</version>
+            <!--<scope>test</scope>-->
+        </dependency>      
+    </dependencies>    
 </project>
