--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,27 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>[5.0.0,5.9.9]</version>
             <!--<scope>test</scope>-->
-        </dependency>      
+        </dependency>     
+        <!-- validation-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator-cdi</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>2.2.6</version>
+        </dependency>         
     </dependencies>    
 </project>
